feat: added all required features
